--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,9 @@
 *.tar.gz
 *.rar
 
+# vim
+.*.swo
+.*.swp
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
