--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,34 @@
-version: "3.3"
-
-services:
-  api:
-    image: doggo_api
-    build: ./back
-    networks:
-      doggo-network:
-    ports:
-      - 8080:8080
-
-  front:
-    image: doggo_front
-    build: ./front
-    networks:
-      doggo-network:
-    ports:
-      - 80:80
+version: "3.4"
 
 networks:
   doggo-network:
     driver: bridge
+
+x-template: &common
+  restart: always
+  env_file:
+    - e.nv
+  networks: 
+    - doggo-network
+
+services:
+  db:
+    <<: *common
+    image: postgres:12.2
+
+  api:
+    <<: *common
+    image: doggo_api
+    build: ./back
+    depends_on:
+      - db
+    ports:
+      - 8080:8080
+
+  front:
+    <<: *common
+    image: doggo_front
+    build: ./front
+    ports:
+      - 80:80
+
